// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`item .itemCombinationConnectionResolver returns the expected result 1`] = `
{
  "edges": [
    {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": {
        "source": "source-item",
        "target": "target-item",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`item .itemConnectionResolver returns the expected result 1`] = `
{
  "edges": [
    {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": {
        "combinations": [],
        "creates": [],
        "imageUrl": "https://picsum.photos/48",
        "myths": false,
        "name": "test-item",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`item .itemCreationConnectionResolver returns the expected result 1`] = `
{
  "edges": [
    {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": {
        "source": "source-item",
        "target": "target-item",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;
